<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="@dimen/primaryCardCornerRadius"
    app:contentPaddingLeft="@dimen/_10sdp"
    app:contentPaddingTop="@dimen/_10sdp"
    app:contentPaddingRight="@dimen/_10sdp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_1sdp"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvDialogTitle"
            style="@style/ItemTitleOrNameStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/add_new_tweet" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/TextInputLayoutBoxCornerRadiusStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15sdp"
            app:hintEnabled="false">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edDialog"
                style="@style/TextInputEditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_tweet_text"
                android:inputType="textMultiLine"
                android:maxLines="3"
                android:singleLine="false" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnDialog"
            style="@style/PrimaryButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/_10sdp"
            android:text="@string/add" />

    </LinearLayout>

</com.google.android.material.card.MaterialCardView>

